# sleepmon

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
backend/: .dockerignore  Dockerfile  Dockerfile.lambda  pyproject.toml
backend/src/sleepmon/: config.py
backend/src/sleepmon/adapters/inbound/http/: app.py  auth_controller.py  controllers.py  guards.py  lambda_handler.py  schemas.py
backend/src/sleepmon/adapters/outbound/auth/: google_identity.py  jwt_access_token.py  refresh_token.py
backend/src/sleepmon/adapters/outbound/catalog/: static_catalog.py  static_recipe_catalog.py
backend/src/sleepmon/adapters/outbound/postgres/: migrate.py  pool.py  queries.py  repository.py  schema.sql
backend/src/sleepmon/application/: auth_service.py  dto.py  services.py
backend/src/sleepmon/domain/: analytics.py  auth.py  catalog_data.py  cooking.py  entities.py  errors.py  extra_tasty.py  leveling.py  ports.py  production.py  recipes.py  skills.py  species.py  value_objects.py
backend/tests/: fakes.py
backend/tests/application/: test_auth_service.py  test_team_service.py
backend/tests/domain/: test_analytics.py  test_auth.py  test_catalog_data.py  test_config.py  test_cooking.py  test_entities.py  test_extra_tasty.py  test_google_identity.py  test_islands.py  test_jwt_access_token.py  test_leveling.py  test_production.py  test_rating_thresholds.py  test_recipes.py  test_refresh_token_codec.py  test_skills.py  test_team_analytics.py  test_types.py
backend/tests/http/: test_api.py  test_app_security.py  test_auth_api.py
backend/tests/integration/: conftest.py  test_app_lifespan.py  test_auth_repositories.py  test_postgres_repository.py
docs/: README.md  (+4 more)
(+164 files in other folders)
